test/files/neg/t3006.check
t3006.scala:8: error: type mismatch;
 found   : "H".type (with underlying type String)
 required: Int
  println(A(3) + "H")
                 ^
one error found
